; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_dw_apb_timer.c_dw_apb_clocksource_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_dw_apb_timer.c_dw_apb_clocksource_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dw_apb_clocksource = type { i32 }

@APBTMR_N_CONTROL = common dso_local global i32 0, align 4
@APBTMR_CONTROL_ENABLE = common dso_local global i32 0, align 4
@APBTMR_N_LOAD_COUNT = common dso_local global i32 0, align 4
@APBTMR_CONTROL_MODE_PERIODIC = common dso_local global i32 0, align 4
@APBTMR_CONTROL_INT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dw_apb_clocksource_start(%struct.dw_apb_clocksource* %0) #0 {
  %2 = alloca %struct.dw_apb_clocksource*, align 8
  %3 = alloca i32, align 4
  store %struct.dw_apb_clocksource* %0, %struct.dw_apb_clocksource** %2, align 8
  %4 = load %struct.dw_apb_clocksource*, %struct.dw_apb_clocksource** %2, align 8
  %5 = getelementptr inbounds %struct.dw_apb_clocksource, %struct.dw_apb_clocksource* %4, i32 0, i32 0
  %6 = load i32, i32* @APBTMR_N_CONTROL, align 4
  %7 = call i32 @apbt_readl(i32* %5, i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @APBTMR_CONTROL_ENABLE, align 4
  %9 = xor i32 %8, -1
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, %9
  store i32 %11, i32* %3, align 4
  %12 = load %struct.dw_apb_clocksource*, %struct.dw_apb_clocksource** %2, align 8
  %13 = getelementptr inbounds %struct.dw_apb_clocksource, %struct.dw_apb_clocksource* %12, i32 0, i32 0
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @APBTMR_N_CONTROL, align 4
  %16 = call i32 @apbt_writel(i32* %13, i32 %14, i32 %15)
  %17 = load %struct.dw_apb_clocksource*, %struct.dw_apb_clocksource** %2, align 8
  %18 = getelementptr inbounds %struct.dw_apb_clocksource, %struct.dw_apb_clocksource* %17, i32 0, i32 0
  %19 = load i32, i32* @APBTMR_N_LOAD_COUNT, align 4
  %20 = call i32 @apbt_writel(i32* %18, i32 -1, i32 %19)
  %21 = load i32, i32* @APBTMR_CONTROL_MODE_PERIODIC, align 4
  %22 = xor i32 %21, -1
  %23 = load i32, i32* %3, align 4
  %24 = and i32 %23, %22
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* @APBTMR_CONTROL_ENABLE, align 4
  %26 = load i32, i32* @APBTMR_CONTROL_INT, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* %3, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %3, align 4
  %30 = load %struct.dw_apb_clocksource*, %struct.dw_apb_clocksource** %2, align 8
  %31 = getelementptr inbounds %struct.dw_apb_clocksource, %struct.dw_apb_clocksource* %30, i32 0, i32 0
  %32 = load i32, i32* %3, align 4
  %33 = load i32, i32* @APBTMR_N_CONTROL, align 4
  %34 = call i32 @apbt_writel(i32* %31, i32 %32, i32 %33)
  %35 = load %struct.dw_apb_clocksource*, %struct.dw_apb_clocksource** %2, align 8
  %36 = call i32 @dw_apb_clocksource_read(%struct.dw_apb_clocksource* %35)
  ret void
}

declare dso_local i32 @apbt_readl(i32*, i32) #1

declare dso_local i32 @apbt_writel(i32*, i32, i32) #1

declare dso_local i32 @dw_apb_clocksource_read(%struct.dw_apb_clocksource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
